# Early_dropout_risk_predictor

./: .env.example  .gitignore  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  MODEL_TRAINING_REPORT.md  PRODUCTION_READINESS.md  PRODUCTION_READY_SUMMARY.md  Procfile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  SYSTEM_RUNNING.md  TEST_RESULTS.md  TRAINING_COMPLETE_SUMMARY.md  WORKING_DASHBOARD_STATUS.md  docker-compose.production.yml  docker-compose.yml  nginx.production.conf  pyproject.toml  render.yaml  requirements-api.txt  requirements-dashboard.txt  requirements.txt
backend/: enhanced_server.py  interventions.py  server.py
backend/data/: interventions.db
configs/: model_config.yaml
dashboard/: app.py  enhanced_working_app.py  simple_app.py  test_app.py  working_app.py
data/: datasources.json  fairness_report.txt  interventions.db
docs/: ARCHITECTURE.md  USAGE.md
frontend/: index.html  package.json
frontend/src/: App-backup.tsx  App-complex.tsx  App-minimal.tsx  App-simple.tsx  App.tsx
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: usePermissions.ts
frontend/src/lib/: api.ts  mockData.ts
ml/: __init__.py  predict.py  train.py
ml/fairness/: __init__.py  evaluator.py
ml/features/: feature_engineering.py
ml/models/: trainer.py
ml/xai/: __init__.py  explainer.py
pipelines/: __init__.py  data_pipeline.py  etl_pipeline.py
scripts/: backup_production.sh  deploy_production.sh  generate_enhanced_data.py  generate_sample_data.py  render_build.sh  test_all_features.py  test_system.py
src/: __init__.py  main.py  production_main.py
src/api/: __init__.py  deps.py
src/core/: __init__.py  config.py  database.py  logging_config.py  production_config.py  security.py
src/models/: __init__.py  audit.py  base.py  intervention.py  ml_model.py  student.py  tenant.py  user.py
src/services/: audit.py
(+30 files in other folders)
